--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mongod": "^2.0.0",
     "mongoose": "^5.0.13",
     "underscore": "^1.8.3"
   }
