--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mocha": "^6.2.0",
+    "supertest": "^4.0.2",
     "underscore": "^1.8.3"
   }
 }
