--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "mocha": "^6.2.0",
+    "mocha": "1.20.1",
     "supertest": "^4.0.2",
     "underscore": "^1.8.3"
   }
